--- a/.github/workflows/nextjs-build.yml
+++ b/.github/workflows/nextjs-build.yml
@@ -6,6 +6,18 @@ on:
       - main
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  workflow_call:
+    inputs:
+      base-path:
+        description: 'Base path for the site'
+        type: string
+        required: false
+        default: ''
+      node-env:
+        description: 'Node environment'
+        type: string
+        required: false
+        default: 'test'
 
 jobs:
   # Build job
@@ -14,6 +26,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Detect package manager
         id: detect-package-manager
         run: |
@@ -31,11 +44,21 @@ jobs:
             echo "Unable to determine package manager"
             exit 1
           fi
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: '16'
           cache: ${{ steps.detect-package-manager.outputs.manager }}
+
+      - name: Setup NODE_ENV
+        run: |
+          export NODE_ENV=${{ github.event.inputs.node-env }}
+
+      - name: Setup Base URL
+        run: |
+          echo "NEXT_PUBLIC_BASE_PATH=${{ github.event.inputs.base-url }}" >> .env.${{ github.event.inputs.node-env }}.local
+
       - name: Restore cache
         uses: actions/cache@v3
         with:
@@ -46,8 +69,16 @@ jobs:
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
+
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+
       - name: Build with Next.js and export Static HTML
         # "next export" is no longer needed when "output: export" is configured in next.config.js https://nextjs.org/docs/advanced-features/static-html-export
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
+
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-${{ github.sha }}
+          path: ./out
