--- a/.github/workflows/nextjs-build.yml
+++ b/.github/workflows/nextjs-build.yml
@@ -1,9 +1,6 @@
 name: Build Next.js
 
 on:
-  pull_request:
-    branches:
-      - main
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   workflow_call:
@@ -82,3 +79,4 @@ jobs:
         with:
           name: build-${{ github.sha }}
           path: ./out
+          if-no-files-found: error
