ci: :construction_worker: deploy to github pages every pr

--- a/.github/workflows/nextjs-build.yml
+++ b/.github/workflows/nextjs-build.yml
@@ -14,7 +14,7 @@ on:
         description: 'Node environment'
         type: string
         required: false
-        default: 'test'
+        default: 'development'
 
 jobs:
   # Build job
