--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    name: Build 🔧
     uses: ./.github/workflows/nextjs-build.yml
     with:
       base-path: /profile/${{ github.sha }}
@@ -16,7 +17,14 @@ jobs:
   deloy:
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      contents: write
+      pull-requests: write
+
     steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
+
       - name: Download a Build Artifact
         uses: actions/download-artifact@v2
         with:
@@ -26,23 +34,20 @@ jobs:
       - name: Deploy to GitHub Pages 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
+          # You need to create `.nojekyll` under the source folder of GitHub Pages.
+          # https://stackoverflow.com/questions/61450307/js-and-css-not-loading-when-hosting-next-application-on-github-pages#answer-64493580
+          # @kas's answers are mostly correct, but it should be noted that the location to add the `.nojekyll` file is not in the parent directory of `_next`, but rather in the source directory of GitHub Pages.
           branch: github-pages-for-check-pr
           folder: ./${{ github.sha }}
           target-folder: ./${{ github.sha }}
 
       - run: echo "https://kuroicc.github.io/profile/${{ github.sha }}"
-      - name: Output the url
-        uses: actions/github-script@v5
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v2
         with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: 'https://kuroicc.github.io/profile/${{ github.sha }}'
-            })
+          message: 'Check out the deployment at https://kuroicc.github.io/profile/${{ github.sha }}'
 
-      - name: Delete a Build Artifact
+      - name: Delete a Build Artifact 🗑️
         uses: geekyeggo/delete-artifact@v2
         with:
           name: build-${{ github.sha }}
